--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
   <script src="phonegap.js"></script>
   <script src="lib/handlebars.js"></script>
   <script src="lib/jquery-2.1.4.min.js"></script>
+  <script src="js/HomeView.js"></script>
   <script src="js/storage/memory-store.js"></script>
   <script src="js/main.js"></script>
 
