--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,22 @@
 <html>
+
+<head>
+  <script type="text/javascript" src="css/source-sans-pro.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
 <body>
 
   <script id="home-tpl" type="text/x-handlebars-template">
-    <div class="header"><h1>Home</h1></div>
-    <div class="search-bar"><input class="search-key" type="text" /></div>
-    <ul class="employee-list"></ul>
+    <div class="header">
+      <h1>Home</h1>
+    </div>
+    <div class="search-bar">
+      <input class="search-key" type="search" />
+    </div>
+    <div class="scroll">
+      <ul class="employee-list"></ul>
+    </div>
   </script>
 
   <script id="employee-li-tpl" type="text/x-handlebars-template">
@@ -16,6 +28,7 @@
   <script src="phonegap.js"></script>
   <script src="lib/handlebars.js"></script>
   <script src="lib/jquery-2.1.4.min.js"></script>
+  <script src="lib/iscroll.js"></script>
   <script src="js/HomeView.js"></script>
   <script src="js/storage/memory-store.js"></script>
   <script src="js/main.js"></script>
